spade-tests/src/snapshots/spade_tests__typeinference__shorthand_turbofish_works.snap
---
source: spade-tests/src/typeinference.rs
---
fn func<A>(a: A) {}

fn func2<A>() {
    let a: bool = false;
    func::$<A>(a)
}

fn test() {
    func2::<uint<8>>()
}


error: Argument type mismatch. Expected uint<8> got bool
  ┌─ testinput:5:16
  │
4 │     let a: bool = false;
  │                   ----- Type bool inferred here
5 │     func::$<A>(a)
  │                ^ expected uint<8>
  ·
9 │     func2::<uint<8>>()
  │             ------ Type uint<8> inferred here
  │
  = note: Expected: uint<8>
               Got: bool
  = The error is in a generic unit instantiated at
    ╰ testinput:9 func2<uint<8>>
